--- a/src/components/Footer/static/css/index.less
+++ b/src/components/Footer/static/css/index.less
@@ -38,7 +38,7 @@
         }
         .footer__box--text {
             margin: 20px 0 0;
-            p {
+            .footer__box--text__paragraf {
                 color: @color__gray;
                 font-size: @base__font-size * 0.8;
             }
