--- a/src/components/Header/static/css/index.less
+++ b/src/components/Header/static/css/index.less
@@ -14,6 +14,7 @@
         align-items: center;
         padding: 0px 20px;
         color:  @color__white;
+        text-align: center;
         .header__box--h1 {
             font-size: @base__font-size * 3.5;
             line-height: @base__font-size * 4;
