--- a/src/components/Contact/static/css/index.less
+++ b/src/components/Contact/static/css/index.less
@@ -23,24 +23,24 @@
             font-weight: 400;
             color: @color__primary--basic;
         }
-        .contact__box--a {
-            font-size: @base__font-size * 1.2;
-            line-height: @base__font-size * 1.7;
-            font-weight: 600;
-            text-decoration: none;
-            display: inline-block;
-            padding: 10px 25px;
-            margin:  20px 0px 0px;
-            color: @color__white;
-            background-color: @color__primary--light;
-            border-radius: 5px;
-            border: 4px solid @color__primary--light;
-            transition: all 0.3s ease-in-out;
-            &:hover {
-                color: @color__primary--dark;
-                background-color: @color__white;
-                border: 4px solid @color__primary--dark;
-            }
-        }
+        // .contact__box--a {
+        //     font-size: @base__font-size * 1.2;
+        //     line-height: @base__font-size * 1.7;
+        //     font-weight: 600;
+        //     text-decoration: none;
+        //     display: inline-block;
+        //     padding: 10px 25px;
+        //     margin:  20px 0px 0px;
+        //     color: @color__white;
+        //     background-color: @color__primary--light;
+        //     border-radius: 5px;
+        //     border: 4px solid @color__primary--light;
+        //     transition: all 0.3s ease-in-out;
+        //     &:hover {
+        //         color: @color__primary--dark;
+        //         background-color: @color__white;
+        //         border: 4px solid @color__primary--dark;
+        //     }
+        // }
     }
 }
