--- a/src/components/Header/static/css/index.less
+++ b/src/components/Header/static/css/index.less
@@ -26,4 +26,7 @@
             line-height: @base__font-size * 2.3;
         }
     }
+    @media only screen and (max-width: 560px) {
+        padding: 0px 0px 40px;
+    }
 }
