--- a/src/components/BreakLine/static/css/index.css
+++ b/src/components/BreakLine/static/css/index.css
@@ -1,1 +1,1 @@
-.breakLine{width:100%;display:flex;justify-content:center}.breakLine .breakLine__box{max-width:200px;width:100%;text-align:center;padding:2px;border-radius:2px;background:linear-gradient(90deg, #12005e 0%, #4a148c, #7c43bd 100%)}
+.breakLine{width:100%;display:flex;justify-content:center}.breakLine .breakLine__box{max-width:200px;width:100%;text-align:center;padding:2px;border-radius:2px;background:linear-gradient(90deg, #1B5E20 0%, #43A047, #4CAF50 100%)}
