--- a/src/static/css/config.less
+++ b/src/static/css/config.less
@@ -1,6 +1,7 @@
-@color__primary--basic: #4a148c;
-@color__primary--light: #7c43bd;
-@color__primary--dark: #12005e;
+@color__primary--basic: #43A047;
+@color__primary--light: #4CAF50;
+@color__primary--dark: #1B5E20;
+
 @color__white: #ffffff;
 @color__gray: #cccccc;
 @color__black: #000000;
