--- a/src/components/Intro/static/css/index.less
+++ b/src/components/Intro/static/css/index.less
@@ -17,5 +17,26 @@
             font-weight: 400;
             color: @color__primary--basic;
         }
+        .intro__box--btn {
+            color: @color__white;
+            background-color: @color__primary--light;
+            outline: none;
+            border: none;
+            margin: 40px 0px 0px;
+            display: block;
+            width: 100%;
+            text-decoration: none;
+            padding:  10px 25px;
+            font-size: @base__font-size * 1.2;
+            line-height: @base__font-size * 1.7;
+            font-weight: 600;
+            border-radius: 10px;
+            transition: all 0.3s ease-in-out;
+            cursor: pointer;
+            &:hover {
+                color: @color__white;
+                background-color: @color__primary--dark;
+            }
+        }
     }
 }
