add new project

--- a/src/components/Project/static/css/index.less
+++ b/src/components/Project/static/css/index.less
@@ -1,37 +1,36 @@
-@import '../../../../../static/css/config.less';
+@import '../../../../static/css/config.less';
 
-.project1 {
+.project {
     width: 100%;
     padding: 40px 0px;
     display: flex;
     justify-content: center;
-    background: linear-gradient(90deg,#4e2b8a,#ac145a,#d6001c);
-    .project1__box {
+    .project__box {
         max-width: 600px;
         width: 100%;
         text-align: center;
         padding:  0px 20px;
-        .project1__box--img {
+        .project__box--img {
             margin:  0px 0px 40px;
-            .project1__box--img__img {
+            .project__box--img__img {
                 border-radius: 10px;
                 border:  10px solid @color__gray;
                 max-width: 500px;
                 width: 100%;
             }
         }
-        .project1__box--text {
-            .project1__box--text__h3 {
+        .project__box--text {
+            .project__box--text__h3 {
                 font-size: @base__font-size * 1.8;
                 line-height: @base__font-size * 2.3;
                 line-height: 100%;
                 font-weight: 600;
                 color: @color__white;
             }
-            .project1__box--text__p {
+            .project__box--text__p {
                 color: @color__white;
             }
-            .project1__box--text__a {
+            .project__box--text__a {
                 margin: 40px 0px 0px;
                 display: block;
                 color: @color__primary--light;
